--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 
 .title {
     font-size: 40px;
-    text-align: center;
+    text-align: left;
     user-select: none;
     color: var(--primary-color);
 }
