--- a/style.css
+++ b/style.css
@@ -13,33 +13,37 @@
 :root {
     --bg-color: #f5f5f5;
     --primary-color: #3a86ff;
+    --secondary-color:#cccccc;
 }
 
 body {
+    margin-top:50px;
+    background-color: var(--secondary-color);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:left;
     align-items: center;
-    min-height: 100vh;
     background-color: var(--bg-color) ;
     gap: 10px;
 }
 
 .container {
-    flex-grow: 3;
+    flex-grow: 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 80%;
+    width: 50%;
     padding: 20px;
     gap: 40px;
 }
 
 .title {
     font-size: 40px;
+    font-weight: bold;
     text-align: left;
     user-select: none;
     color: var(--primary-color);
+    
 }
 
 .row {
@@ -50,13 +54,13 @@ body {
 .inputbox {
     position: relative;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     height: 40px;
 }
 
 .inputbox label {
     position: relative;
-    top:0;
+    top: 0;
     font-size: 20px;
     color: var(--primary-color);
     transition: .3s;
@@ -90,13 +94,15 @@ body {
 }
 
 .container button {
-    justify-self: center;
+    justify-self: left;
     width: 100px;
     height: 50px;
     border:none;
     outline: none;
     cursor: pointer;
     background-color: var(--primary-color);
+    box-shadow: 0 5px 15px rgba(58, 134, 255, 0.4);
+    border-bottom: #3a86ff;
     font-size: 20px;
     color:var(--bg-color);
     border-radius: 10px;
